# SoundXs

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_errors.txt
include/: AudioEngine.h  DSPEngine.h  DeviceManager.h  MainWindow.h  SettingsManager.h
resources/: app.rc  resources.qrc  style.qss
src/: AudioEngine.cpp  DSPEngine.cpp  DeviceManager.cpp  MainWindow.cpp  SettingsManager.cpp  main.cpp
